# StockHelper

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  service.py
app/datasource/: __init__.py  base.py  mock.py  real.py  yahoo_api_source.py  yfinance_source.py
tests/: test_api.py  test_models.py  test_service.py
